# neetcode.io

./: .gitignore  CMakeLists.txt  NEETCODE_150.md  PROGRESS.md  PROJECT_STATUS.md  README.md  README_BUILD.md  build.sh  generate_problems.py  main.py  pyproject.toml  run.sh  test.sh  test_python.sh
1-D Dynamic Programming/: climbing_stairs.cpp  climbing_stairs.py  coin_change.cpp  coin_change.py  decode_ways.py  house_robber.cpp  house_robber.py  house_robber_ii.py  longest_palindromic_substring.py  maximum_product_subarray.py  min_cost_climbing_stairs.cpp  min_cost_climbing_stairs.py  partition_equal_subset_sum.cpp  word_break.cpp
2-D Dynamic Programming/: best_time_to_buy_and_sell_stock_with_cooldown.cpp  burst_balloons.cpp  burst_balloons.py  coin_change_ii.cpp  distinct_subsequences.py  edit_distance.cpp  edit_distance.py  longest_increasing_path_in_a_matrix.cpp  target_sum.cpp  target_sum.py
Advanced Graphs/: alien_dictionary.py  cheapest_flights_within_k_stops.cpp  cheapest_flights_within_k_stops.py  min_cost_to_connect_all_points.py  reconstruct_itinerary.cpp  swim_in_rising_water.py
Arrays & Hashing/: contains_duplicate.cpp  contains_duplicate.py  group_anagrams.cpp  group_anagrams.py  longest_consecutive_sequence.cpp  two_sum.cpp  two_sum.py  valid_anagram.py  valid_sudoku.cpp  valid_sudoku.py
Backtracking/: combination_sum.cpp  combination_sum_ii.py  letter_combinations_of_a_phone_number.cpp  letter_combinations_of_a_phone_number.py  n_queens.py  permutations.py  subsets.cpp  subsets_ii.cpp  word_search.cpp
Binary Search/: binary_search.cpp  binary_search.py  find_minimum_in_rotated_sorted_array.cpp  koko_eating_bananas.cpp  koko_eating_bananas.py  median_of_two_sorted_arrays.cpp  search_a_2d_matrix.py  search_in_rotated_sorted_array.cpp  search_in_rotated_sorted_array.py
Bit Manipulation/: counting_bits.cpp  missing_number.cpp  number_of_1_bits.cpp  reverse_integer.cpp  sum_of_two_integers.cpp
Graphs/: clone_graph.py  course_schedule.py  graph_valid_tree.cpp  max_area_of_island.cpp  number_of_connected_components_in_an_undirected_graph.cpp  number_of_connected_components_in_an_undirected_graph.py  pacific_atlantic_water_flow.cpp  redundant_connection.cpp  redundant_connection.py  surrounded_regions.cpp  surrounded_regions.py  walls_and_gates.cpp  walls_and_gates.py  word_ladder.cpp
Greedy/: hand_of_straights.py  jump_game.py  merge_triplets_to_form_target_triplet.py  valid_parenthesis_string.cpp
Heap & Priority Queue/: design_twitter.py  find_median_from_data_stream.cpp  find_median_from_data_stream.py  kth_largest_element_in_a_stream.cpp  kth_largest_element_in_a_stream.py  kth_largest_element_in_an_array.cpp  last_stone_weight.cpp  last_stone_weight.py  task_scheduler.cpp  task_scheduler.py
Intervals/: insert_interval.py  meeting_rooms.py  merge_intervals.py  non_overlapping_intervals.cpp  non_overlapping_intervals.py
Linked List/: add_two_numbers.cpp  add_two_numbers.py  copy_list_with_random_pointer.cpp  find_the_duplicate_number.cpp  linked_list_cycle.py  lru_cache.py  merge_two_sorted_lists.cpp  remove_nth_node_from_end_of_list.cpp  remove_nth_node_from_end_of_list.py  reverse_nodes_in_k_group.cpp
Math & Geometry/: detect_squares.cpp  detect_squares.py  happy_number.cpp  set_matrix_zeroes.py  spiral_matrix.py
Sliding Window/: sliding_window_maximum.cpp  sliding_window_maximum.py
Stack/: car_fleet.cpp  car_fleet.py  daily_temperatures.cpp  evaluate_reverse_polish_notation.py  generate_parentheses.py  largest_rectangle_in_histogram.cpp  largest_rectangle_in_histogram.py  min_stack.cpp  min_stack.py  valid_parentheses.cpp  valid_parentheses.py
Trees/: binary_tree_level_order_traversal.cpp  binary_tree_right_side_view.cpp  binary_tree_right_side_view.py  construct_binary_tree_from_preorder_and_inorder_traversal.cpp  count_good_nodes_in_binary_tree.cpp  invert_binary_tree.cpp  invert_binary_tree.py  maximum_depth_of_binary_tree.py  subtree_of_another_tree.cpp
Tries/: word_search_ii.cpp
Two Pointers/: 3sum.cpp  3sum.py  container_with_most_water.py  trapping_rain_water.py  two_sum_ii_input_array_is_sorted.py  valid_palindrome.py
templates/: template.cpp  template.py
todo/1-D Dynamic Programming/: decode_ways.cpp  house_robber_ii.cpp  longest_increasing_subsequence.cpp  longest_increasing_subsequence.py  longest_palindromic_substring.cpp  maximum_product_subarray.cpp  palindromic_substrings.cpp  palindromic_substrings.py  partition_equal_subset_sum.py  word_break.py
todo/2-D Dynamic Programming/: best_time_to_buy_and_sell_stock_with_cooldown.py  coin_change_ii.py  distinct_subsequences.cpp  interleaving_string.cpp  interleaving_string.py  longest_common_subsequence.cpp  longest_common_subsequence.py  longest_increasing_path_in_a_matrix.py  regular_expression_matching.cpp  regular_expression_matching.py  unique_paths.cpp  unique_paths.py
todo/Advanced Graphs/: alien_dictionary.cpp  min_cost_to_connect_all_points.cpp  network_delay_time.cpp  network_delay_time.py  reconstruct_itinerary.py  swim_in_rising_water.cpp
todo/Arrays & Hashing/: encode_and_decode_strings.cpp  encode_and_decode_strings.py  longest_consecutive_sequence.py  product_of_array_except_self.cpp  product_of_array_except_self.py  top_k_frequent_elements.cpp  top_k_frequent_elements.py  valid_anagram.cpp
todo/Backtracking/: combination_sum.py  combination_sum_ii.cpp  n_queens.cpp  palindrome_partitioning.cpp  palindrome_partitioning.py  permutations.cpp  subsets.py  subsets_ii.py  word_search.py
todo/Binary Search/: find_minimum_in_rotated_sorted_array.py  median_of_two_sorted_arrays.py  search_a_2d_matrix.cpp  time_based_key_value_store.cpp  time_based_key_value_store.py
todo/Bit Manipulation/: counting_bits.py  missing_number.py  number_of_1_bits.py  reverse_bits.cpp  reverse_bits.py  reverse_integer.py  single_number.cpp  single_number.py  sum_of_two_integers.py
todo/Graphs/: clone_graph.cpp  course_schedule.cpp  course_schedule_ii.cpp  course_schedule_ii.py  graph_valid_tree.py  max_area_of_island.py  number_of_islands.cpp  number_of_islands.py  (+4 more)
(+87 files in other folders)
